# second-brain

./: .gitignore  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.e2e.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src/components/: AnimatedToggle.tsx  ConfirmRegenerationModal.tsx  ConfirmationModal.tsx  DebugConsole.tsx  ErrorBoundary.tsx  IconPicker.tsx  Modal.tsx  PageHeader.tsx  Portal.tsx  SectionCard.tsx
src/hooks/: useAppLifecycle.ts  useClickOutside.ts  useDragAndDrop.ts  useExpenseFormBridge.ts
src/lib/: amountUtils.ts  currencyUtils.ts  dateHelpers.ts  dateUtils.ts  expenseHelpers.ts  fileStorage.ts  financeOverview.ts  folderHelpers.ts  icons.ts  notesExportImport.ts  notifications.ts  reminderService.ts  utils.ts
src/stores/: useAppStore.ts  useBackupStore.ts  useDragDropStore.ts  useExpenseStore.ts  useHistoryStore.ts  useIncomeStore.ts  useNotesStore.ts  useOverviewStore.ts  useSettingsStore.ts  useThemeStore.ts
src/types/: backup.ts  calendar.ts  expense.ts  finance.ts  income.ts  index.ts  mindmap.ts  notes.ts  overview.ts  settings.ts  storage.ts  theme.ts
tests/: README.md  expensesStorage.test.ts  incomeStorage.test.ts  notesStorage.test.ts  setup.ts
tests/components/: ExpenseForm.test.tsx  ExpenseList.test.tsx  ExpenseOverview.test.tsx  IncomeChart.test.tsx  ManualEntryForm.test.tsx  MonthNavigation.test.tsx  MonthlyView.test.tsx  NotesCard.test.tsx  (+2 more)
(+185 files in other folders)
